force-app/main/default/objects/DevOps_Audit_Log__c/DevOps_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable record of every AI tool invocation.</description>
    <label>DevOps Audit Log</label>
    <nameField>
        <displayFormat>AUD-{000000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevOps Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>