force-app/main/default/objects/DevOps_Audit_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Deployment Request</fullName>
                </value>
                <value>
                    <fullName>Deployment Execute</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>