force-app/main/default/objects/DevOps_Audit_Log__c/fields/Actor_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_User__c</fullName>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DevOps Audit Logs</relationshipLabel>
    <relationshipName>DevOps_Audit_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>