force-app/main/default/objects/DevOps_Audit_Log__c/fields/Result_Detail__c.field-meta.xml
<CustomField>
    <fullName>Result_Detail__c</fullName>
    <label>Result Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>