force-app/main/default/objects/DevOps_Audit_Log__c/fields/Tool_Arguments__c.field-meta.xml
<CustomField>
    <fullName>Tool_Arguments__c</fullName>
    <label>Tool Arguments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>